--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GSP Fire & Safety Systems</title>
+    <title>GSP Fire and Safety Systems</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
     <img src="logo.jpg" alt="Logo" class="logo">
-    <h1>GSP Fire & Safety Systems</h1>
+    <h1>GSP Fire and Safety Systems</h1>
     <p>Stay tuned! We're working on our website.</p>
     <div class="contact">
         <p>Contact us:</p>
