--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Jekyll Serif Theme</title>
+  <title>GSP Fire and Safety Systems</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/png" href="/images/my-favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/images/my-favicon/favicon.svg" />
@@ -18,12 +18,12 @@
   <!-- <link rel="preload" href="/assets/fonts/playfair-display.woff2" as="font" type="font/woff2" crossorigin> -->
   <link href="/assets/css/style.css" rel="stylesheet">
   
-  <meta name="description" content="Jekyll Serif contains content types for a typical business website. The theme is fully responsive, blazing fast and artfully illustrated." />
-  <meta property="og:title" content="Jekyll Serif Theme"/>
+  <meta name="description" content="Your go-to fire and safety solution provider." />
+  <meta property="og:title" content="GSP Fire and Safety Systems"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content=""/>
   
-  <meta property="og:description" content="Jekyll Serif contains content types for a typical business website. The theme is fully responsive, blazing fast and artfully illustrated."/>
+  <meta property="og:description" content="Your go-to fire and safety solution provider."/>
   <meta name="twitter:card" content="summary"/>
   
   
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="logo">
       <a href=""><img width="80px" height="64px" alt="GSP Fire and Safety Systems" src="/images/logo/logo.svg" /></a>
-      <a style="margin-top: 8px; font-size: 18px;" href=""><strong>FIRE AND SAFETY SYSTEMS</strong></a>
+      <a style="margin-top: 8px; font-size: 18px;" href="https://gspfire.com"><strong>FIRE AND SAFETY SYSTEMS</strong></a>
     </div>
     <!-- <div class="logo-mobile">
       <a href=""><img width="" height="" alt="GSP Fire and Safety Systems" src="" /></a>
@@ -114,7 +114,7 @@ Your go-to fire and safety solution provider.</p>
       </div>
       
       <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2 position-relative">
-        <img alt="Jekyll Serif Theme" class="intro-image intro-image-absolute intro-image-hide-mobile" src="images/pexels-levi-damasceno-169031-571252.jpg" />
+        <img alt="GSP Fire and Safety Systems" class="intro-image intro-image-absolute intro-image-hide-mobile" src="images/pexels-levi-damasceno-169031-571252.jpg" />
       </div>
       
     </div>
