--- a/services/index.html
+++ b/services/index.html
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="logo">
       <a href=""><img width="80px" height="64px" alt="GSP Fire and Safety Systems" src="/images/logo/logo.svg" /></a>
-      <a style="margin-top: 8px; font-size: 18px;" href=""><strong>FIRE AND SAFETY SYSTEMS</strong></a>
+      <a style="margin-top: 8px; font-size: 18px;" href="https://gspfire.com"><strong>FIRE AND SAFETY SYSTEMS</strong></a>
     </div>
     <!-- <div class="logo-mobile">
       <a href=""><img width="" height="" alt="GSP Fire and Safety Systems" src="" /></a>
