deploy: 17c8ec5db8b811413e0fa7cc6039eee5d81f7bf3

--- a/contact/index.html
+++ b/contact/index.html
@@ -148,7 +148,7 @@
 Vijay Plaza,
 Opposite Abad Dairy,
 Opposite Eka Club,
-Git Mandir Road,
+Gita Mandir Road,
 Ahmedabad - 380022</p>
 
 <p>Follow this “DTDC Kalupur” landmark to reach our office.</p>
