deploy: c03b05113256276d938059afc08ccf205b17c120

--- a/services/access-control/index.html
+++ b/services/access-control/index.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Access Control & CCTV Systems"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content=""/>
-  <meta property="og:image" content="https://gspfire.com/images/products/access-control-1.jpg"/>
+  <meta property="og:image" content="https://gspfire.com/images/products/access-control-1.webp"/>
   <meta property="og:description" content="Enhance security with our advanced access control and CCTV systems. Customized solutions for businesses of all sizes, ensuring 24/7 protection and peace of mind."/>
   <meta name="twitter:card" content="summary"/>
   
@@ -84,7 +84,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <h1 class="title">Access Control & CCTV Systems</h1>
-        <img  class="flexible-img" src="/images/products/access-control-1.jpg" alt="Access Control & CCTV Systems">
+        <img  class="flexible-img" src="/images/products/access-control-1.webp" alt="Access Control & CCTV Systems">
         <div class="content"><p>Protecting your property and ensuring the safety of your assets is our top priority. Our <strong>Access Control &amp; CCTV Systems</strong> combine advanced technology with user-friendly design to provide comprehensive security solutions for businesses of all sizes. Whether you’re managing a small office or a large industrial facility, we offer customized systems to meet your unique needs.</p>
 
 <h4 id="key-features-of-our-systems"><strong>Key Features of Our Systems</strong></h4>
