--- a/services/fire-alarm-smoke-detector/index.html
+++ b/services/fire-alarm-smoke-detector/index.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Fire Alarm & Smoke Detection Systems"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content=""/>
-  <meta property="og:image" content="https://gspfire.com/images/products/fire-alarm-1.png"/>
+  <meta property="og:image" content="https://gspfire.com/images/products/fire-alarm-1.webp"/>
   <meta property="og:description" content="Early detection saves lives. Our advanced fire alarm and smoke detection systems provide instant alerts, ensuring swift action and safety during emergencies."/>
   <meta name="twitter:card" content="summary"/>
   
@@ -84,7 +84,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <h1 class="title">Fire Alarm & Smoke Detection Systems</h1>
-        <img  class="flexible-img" src="/images/products/fire-alarm-1.png" alt="Fire Alarm & Smoke Detection Systems">
+        <img  class="flexible-img" src="/images/products/fire-alarm-1.webp" alt="Fire Alarm & Smoke Detection Systems">
         <div class="content"><p>Early detection is crucial for minimizing the impact of fires, and our advanced <strong>fire alarm and smoke detection systems</strong> are designed to provide instant alerts, ensuring swift action and evacuation.</p>
 
 <h4 id="key-components"><strong>Key Components</strong></h4>
