--- a/services/fire-extinguisher/index.html
+++ b/services/fire-extinguisher/index.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Fire Extinguishers"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content=""/>
-  <meta property="og:image" content="https://gspfire.com/images/products/fire-extinguishers-1.png"/>
+  <meta property="og:image" content="https://gspfire.com/images/products/fire-extinguishers-1.webp"/>
   <meta property="og:description" content="Be prepared for any fire emergency with our range of portable extinguishers. Designed for different fire types, they’re your first line of defense against small fires."/>
   <meta name="twitter:card" content="summary"/>
   
@@ -84,7 +84,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <h1 class="title">Fire Extinguishers</h1>
-        <img  class="flexible-img" src="/images/products/fire-extinguishers-1.png" alt="Fire Extinguishers">
+        <img  class="flexible-img" src="/images/products/fire-extinguishers-1.webp" alt="Fire Extinguishers">
         <div class="content"><p>Fire extinguishers are essential tools for tackling small fires before they escalate into major disasters. Our range of portable extinguishers is designed to address different fire types, ensuring you have the right solution for every situation.</p>
 
 <h4 id="types-of-fire-extinguishers-we-offer"><strong>Types of Fire Extinguishers We Offer</strong></h4>
