--- a/services/fire-hydrant-sprinkler/index.html
+++ b/services/fire-hydrant-sprinkler/index.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Fire Hydrant & Sprinkler Systems"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content=""/>
-  <meta property="og:image" content="https://gspfire.com/images/products/fire-hydrant-systems-1.jpeg"/>
+  <meta property="og:image" content="https://gspfire.com/images/products/fire-hydrant-systems-1.webp"/>
   <meta property="og:description" content="Protect lives and property with our expertly designed fire hydrant and sprinkler systems. From installation to testing, we ensure rapid response and compliance with the highest safety standards."/>
   <meta name="twitter:card" content="summary"/>
   
@@ -84,7 +84,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <h1 class="title">Fire Hydrant & Sprinkler Systems</h1>
-        <img  class="flexible-img" src="/images/products/fire-hydrant-systems-1.jpeg" alt="Fire Hydrant & Sprinkler Systems">
+        <img  class="flexible-img" src="/images/products/fire-hydrant-systems-1.webp" alt="Fire Hydrant & Sprinkler Systems">
         <div class="content"><p>Fire hydrant and sprinkler systems are critical components of any fire safety infrastructure, designed to protect lives and property by providing rapid response during emergencies. Our team specializes in the <strong>design, supply, installation, testing, and commissioning (SITC)</strong> of these systems, ensuring they meet the highest industry standards and comply with local fire safety regulations.</p>
 
 <h4 id="key-features-of-our-systems"><strong>Key Features of Our Systems</strong></h4>
