--- a/services/fire-safety-equipment/index.html
+++ b/services/fire-safety-equipment/index.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Fire and Safety Equipment"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content=""/>
-  <meta property="og:image" content="https://gspfire.com/images/products/safety-equipment-1.jpg"/>
+  <meta property="og:image" content="https://gspfire.com/images/products/safety-equipment-1.webp"/>
   <meta property="og:description" content="Equip yourself with essential fire safety tools and gear. From PPE to safety signs, our high-quality products ensure compliance and protection in emergencies."/>
   <meta name="twitter:card" content="summary"/>
   
@@ -84,7 +84,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <h1 class="title">Fire and Safety Equipment</h1>
-        <img  class="flexible-img" src="/images/products/safety-equipment-1.jpg" alt="Fire and Safety Equipment">
+        <img  class="flexible-img" src="/images/products/safety-equipment-1.webp" alt="Fire and Safety Equipment">
         <div class="content"><p>When it comes to fire safety and emergency preparedness, having the right equipment can make all the difference. Our <strong>Fire and Safety Equipment</strong> range includes essential tools and gear designed to protect lives, minimize injuries, and ensure compliance with safety regulations. From personal protective equipment (PPE) to emergency response tools, we provide high-quality products that cater to diverse safety needs.</p>
 
 <h4 id="key-products-in-our-range"><strong>Key Products in Our Range</strong></h4>
