--- a/services/fire-safety-training/index.html
+++ b/services/fire-safety-training/index.html
@@ -22,7 +22,7 @@
   <meta property="og:title" content="Fire Safety Training Programs"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content=""/>
-  <meta property="og:image" content="https://gspfire.com/images/products/fire-safety-1.jpg"/>
+  <meta property="og:image" content="https://gspfire.com/images/products/fire-safety-1.webp"/>
   <meta property="og:description" content="Empower your team with our fire safety training programs. Learn fire types, extinguisher use, and evacuation protocols to build a culture of safety."/>
   <meta name="twitter:card" content="summary"/>
   
@@ -84,7 +84,7 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <h1 class="title">Fire Safety Training Programs</h1>
-        <img  class="flexible-img" src="/images/products/fire-safety-1.jpg" alt="Fire Safety Training Programs">
+        <img  class="flexible-img" src="/images/products/fire-safety-1.webp" alt="Fire Safety Training Programs">
         <div class="content"><p>Knowledge is the foundation of safety, and our <strong>fire safety training programs</strong> are designed to equip individuals and organizations with the skills needed to respond effectively to fire emergencies.</p>
 
 <h4 id="program-highlights"><strong>Program Highlights</strong></h4>
