--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Your go-to fire and safety solution provider.</p>
       </div>
       
       <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2 position-relative">
-        <img alt="GSP Fire and Safety Systems" class="intro-image intro-image-absolute intro-image-hide-mobile" src="images/pexels-levi-damasceno-169031-571252.jpg" />
+        <img alt="GSP Fire and Safety Systems" class="intro-image intro-image-absolute intro-image-hide-mobile" src="images/pexels-levi-damasceno-169031-571252.webp" />
       </div>
       
     </div>
